experiments/system-usage/test/networkpolicies/app-b/app-b-allow-backend-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-b-allow-backend-frontend
  namespace: test-thesis
spec:
  podSelector:
    matchLabels:
      app: app-b
      role: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: app-b
              role: frontend
      ports:
        - protocol: TCP
          port: 80 
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: app-b
              role: frontend
      ports:
        - protocol: TCP
          port: 80 
  policyTypes:
    - Ingress
    - Egress
